product-catalog-svc/kubernetes/deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  labels:
    app: product-catalog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product-catalog
  template:
    metadata:
      labels:
        app: product-catalog
    spec:
      containers:
        - name: product-catalog
          imagePullPolicy: IfNotPresent
          image: techdozo/product-catalog-svc:1.0.0
